# routes/api.php
@@ -6,6 +6,7 @@ use App\Http\Controllers\Api\LikeDislikeController;
 
 Route::prefix('v1')->group(function () {
     Route::get('/people/recommended', RecommendedPeopleController::class);
+    Route::get('/people/{user_id}/liked-list', [LikeDislikeController::class, 'likedList']);
 
     Route::middleware('device')->group(function () {
         Route::post('/people/{user_id}/like', [LikeDislikeController::class, 'like']);
